button and link animations; complete footer; fixed more code to be collapsable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
 /*********** CSS RESET ************/
-html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed,figure, figcaption, footer, header, menu, nav, output, ruby, section, summary,time, mark, audio, video {
+html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed,figure, figcaption, footer, header, menu, main, nav, output, ruby, section, summary,time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 0;
+	color: inherit;
 	text-decoration: none;
 	vertical-align: baseline;
 }
@@ -33,7 +34,7 @@ table {
 }
 
 p {
-	font-family: League Gothic, Tahoma, sans-serif;
+	font-family: "League Gothic", Tahoma, sans-serif;
 }
 
 header {
@@ -49,19 +50,20 @@ nav {
 	display: inline-block;
 }
 
-nav > ul > li {
+nav li {
 	display: inline-block;
 	margin-left: 38px;
 }
 
-nav > ul > li > a > p {
+nav p {
 	font-size: 26px;
 	color: #e5e5e5;
 }
 
 footer {
-	height: 90px;
+	padding: 20px;
 	background: url("../img/bg-darkGrey.png");
+	text-align: center;
 }
 
 /*********** CLASSES ************/
@@ -89,7 +91,7 @@ footer {
 	text-align: left;
 }
 
-.cta-heading {
+.cta-text {
 	font-size: 34px;
 	display: inline-block;
 	vertical-align: middle;
@@ -102,6 +104,10 @@ footer {
 	display: inline-block;
 }
 
+.tuffy-font {
+	font-family: "Tuffy", "Trebuchet MS", sans-serif;
+}
+
 /*********** IDENTIFIERS ************/
 
 #mainHeading {
@@ -111,25 +117,26 @@ footer {
 	display: inline-block;
 }
 
-#loginarea {
+#login-wrapper {
 	display: inline-block;
 	position: absolute;
 	right: 0;
 	padding: 12px 0 0 0;
 }
 
-#loginarea p {
+#login-wrapper p {
 	display: inline-block;
+	vertical-align: middle;
 }
 
 #logIn {
 	border: 1px solid #e5e5e5;
-	color: #e5e5e5;
 }
 
 #or {
 	font-size: 20px;
 	color: #e5e5e5;
+	margin: 0 4px;
 }
 
 #carousel-section {
@@ -139,7 +146,7 @@ footer {
 	margin: auto;
 }
 
-#callToAction1 {
+#callToAction {
 	background: url("../img/bg-darkGrey.png");
 	text-align: center;
 	padding: 5px;
@@ -167,6 +174,182 @@ footer {
 	background: url("../img/sunset_skyline.png") 50% 40% no-repeat;
 	background-size: cover;
 	text-align: center;
+}
+
+#findUsFb {
+	display: inline-block;
+	position: absolute;
+	left: 0;
+}
+
+#findUsFb p {
+	color: #e5e5e5;
+	font-size: 22px;
+	display: inline;
+	position: relative;
+	bottom: 4px;
+}
+
+#findUsFb img {
+	display: inline;
+	width: 26px;
+	padding-right: 8px;
+}
+
+#emailUs {
+	display: inline-block;
+	position: absolute;
+	right: 0;
+}
+
+#emailUs p {
+	color: #e5e5e5;
+	font-size: 22px;
+	display: inline;
+	position: relative;
+	bottom: 2px;
+}
+
+#emailUs img {
+	display: inline;
+	width: 32px;
+	padding-left: 8px;
+}
+
+#copyright-text {
+	font-family: "Tuffy", "Trebuchet MS", sans-serif;
+	font-size: 10px;
+	color: #EC5E46;
+	padding-top: 48px;
+}
+
+#copyright-text a {
+	text-decoration: underline;
+	font-size: 10px;
+}
+
+/** Credit to Ian Lunn @ GitHub https://github.com/IanLunn/ **/
+
+/*Underline from left */
+.hvr-underline-from-left {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	position: relative;
+	overflow: hidden;
+}
+.hvr-underline-from-left:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	left: 0;
+	right: 100%;
+	bottom: 0;
+	background: #EC5E46; /* line color */
+	height: 3px; /* line thickness */
+	-webkit-transition-property: right;
+	transition-property: right;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+	right: 0;
+}
+
+/* Radial Out - Blue*/
+.hvr-radial-out-blue {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	position: relative;
+	overflow: hidden;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+}
+.hvr-radial-out-blue:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #46d4ec;
+	border-radius: 100%;
+	-webkit-transform: scale(0);
+	transform: scale(0);
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.hvr-radial-out-blue:hover, .hvr-radial-out-blue:focus, .hvr-radial-out-blue:active {
+	color: #262626;
+}
+.hvr-radial-out-blue:hover:before, .hvr-radial-out-blue:focus:before, .hvr-radial-out-blue:active:before {
+	-webkit-transform: scale(2);
+	transform: scale(2);
+}
+
+/* Radial Out - White*/
+.hvr-radial-out-white {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	position: relative;
+	overflow: hidden;
+	color: #e5e5e5;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+}
+.hvr-radial-out-white:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #e5e5e5;
+	border-radius: 100%;
+	-webkit-transform: scale(0);
+	transform: scale(0);
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.hvr-radial-out-white:hover, .hvr-radial-out-white:focus, .hvr-radial-out-white:active {
+	color: #262626;
+}
+.hvr-radial-out-white:hover:before, .hvr-radial-out-white:focus:before, .hvr-radial-out-white:active:before {
+	-webkit-transform: scale(2);
+	transform: scale(2);
 }
 
 /*********** MOBILE FORMATTING ************/
